--- a/styles/style.css
+++ b/styles/style.css
@@ -1181,7 +1181,10 @@ header .wrapper {
   .hero figure {
     background: #000; }
   .hero figure img {
-    opacity: 0.5; }
+    opacity: 0.5;
+    -o-object-fit: cover;
+    object-fit: cover;
+    height: 60vh; }
   .hero__content {
     text-align: center;
     padding: 0; }
@@ -1406,7 +1409,7 @@ header .wrapper {
   .hero__figure__img img {
     -o-object-fit: cover;
     object-fit: cover;
-    height: 60vh; }
+    height: 80vh; }
   .welcome .btn, .hero .btn {
     margin-top: 10px; }
   .text-block__copy {
