--- a/styles/style.scss
+++ b/styles/style.scss
@@ -966,7 +966,10 @@ header .wrapper {
   }
   .hero figure img {
     opacity: 0.5;
+    object-fit: cover;
+    height: 60vh;
   }
+
   .hero__content {
     text-align: center;
     padding: 0;
@@ -1177,7 +1180,7 @@ header .wrapper {
 
  .hero__figure__img img {
    object-fit: cover;
-   height: 60vh;
+   height: 80vh;
  }
 
 
